# evemerc

./: .gitignore  PLAN.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: sync-api.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  lib.rs  main.rs  sde.rs
src-tauri/src/commands/: auth.rs  eve_logs.rs  mod.rs  windows.rs
src-tauri/src/eve_logs/: decoder.rs  discovery.rs  mod.rs  offsets.rs  parser.rs  tailer.rs
src/lib/account/: AccountPanel.svelte  api.test.ts  api.ts
src/lib/api/: client.test.ts  client.ts  openapi.yaml  schema.d.ts
src/lib/audits/: MapActivityLog.svelte  api.test.ts  api.ts  describe.test.ts  describe.ts
src/lib/auth/: flow.test.ts  flow.ts  pkce.test.ts  pkce.ts  tokenStore.ts
src/lib/cache/: bridge.ts
src/lib/commands/: palette.test.ts  palette.ts
src/lib/fleet/: FleetAlertsPanel.svelte  FleetCommandActions.svelte  FleetCommanders.svelte  FleetComposition.svelte  FleetMemberList.svelte  actions.test.ts  actions.ts  alerts.test.ts  alerts.ts  composition.test.ts  composition.ts  freshness.test.ts  freshness.ts  localJump.test.ts  localJump.ts  status.test.ts  status.ts
src/lib/intel/: FleetKillfeed.svelte  IntelChannelFeed.svelte  SelectedSystemIntel.svelte  killfeed.test.ts  killfeed.ts  system.test.ts  system.ts
src/lib/sde/: bridge.ts
src/windows/: PanelWindow.svelte
(+76 files in other folders)
