[package]
name = "evemerc-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "evemerc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "=8.2.0"
chrono = { version = "=0.4.45", features = ["serde"] }
regex = "=1.13.0"
sha2 = "=0.10.9"
hex = "=0.4.3"
encoding_rs = "=0.8.35"
dirs = "=6.0.0"
keyring = "3.6.3"
hostname = "0.4.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
flate2 = "1.1.9"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "=3.27.0"

